[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

[features]
bell = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
signal-hook = "0.3.17"
clap = { version = "4.4.11", features = ["derive"] }
nestify = "0.3.3"
notify-rust = "4.10.0"
soloud = "1.0.5"
colorous = "1.0.13"
dirs = "5.0.1"
