[package]
name = "keylogger"
authors = ["Miel Peeters"]
description = "A keylogger for Linux"
version = "0.4.0"
edition = "2021"

[features]
bell = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
signal-hook = "0.3.17"
clap = { version = "4.4.11", features = ["derive"] }
nestify = "0.3.3"
notify-rust = "4.10.0"
soloud = "1.0.5"
colorous = "1.0.13"
dirs = "5.0.1"
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10.8"
rand_core = { version = "0.6", features = ["std"] }
rpassword = "7.3.1"
chrono = { version = "0.4.37", features = ["alloc"] }
chrono-tz = "0.9.0"
miniz_oxide = "0.7.3"
